--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@mui/x-data-grid": "^7.28.3",
     "@refinedev/core": "^4.57.9",
+    "@refinedev/mui-x-data-grid": "github:sanchezcarlosjr/useDataGrid",
     "@types/lodash": "^4.17.16",
     "lodash": "^4.17.21",
     "vite-tsconfig-paths": "^5.1.4"
